--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+*{
+    @apply p-0 m-0 box-border lg:text-base text-sm transition-all ease-in-out duration-300
+}
