--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-*{
-    @apply p-0 m-0 box-border lg:text-base text-sm transition-all ease-in-out duration-300
+* {
+  @apply p-0 m-0 box-border lg:text-base text-sm transition-all ease-in-out duration-300;
 }
