--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,5 +1,5 @@
 .navWrapper {
-  @apply w-full h-20 flex justify-between items-center  lg:px-20 px-2;
+  @apply w-full h-20 flex justify-between items-center border-b-[1px] border-solid border-[#38383883]  lg:px-20 px-2;
 }
 
 .leftNav {
@@ -19,17 +19,17 @@
 }
 
 .centerNav p:nth-child(2) {
-  @apply rounded-r-lg rounded-l-none ;
+  @apply rounded-r-lg rounded-l-none;
 }
 
 .centerNav p b {
- @apply w-2 h-2 rounded-full bg-[#91790A] lg:mr-4 mr-1
+  @apply w-2 h-2 rounded-full bg-[#91790A] lg:mr-4 mr-1;
 }
-.rightNav{
-    @apply lg:text-[1.5rem] text-[1rem] lg:w-16 lg:h-16 w-11 h-11 bg-gray-200 rounded-full flex justify-center
-     items-center relative
+.rightNav {
+  @apply lg:text-[1.5rem] text-[1rem] lg:w-16 lg:h-16 w-11 h-11 bg-gray-200 rounded-full flex justify-center
+     items-center relative;
 }
 
-.rightNav p{
-    @apply lg:w-4 lg:h-4 w-3 h-3 bg-[#4CAF50] absolute rounded-full top-0 right-0
+.rightNav p {
+  @apply lg:w-4 lg:h-4 w-3 h-3 bg-[#4CAF50] absolute rounded-full top-0 right-0;
 }
