--- a/src/sign_in__pages/signIn_pages.css
+++ b/src/sign_in__pages/signIn_pages.css
@@ -7,29 +7,104 @@
 .logo{
     position: absolute;
     top: 20px;
+    z-index: 10000;
 }
 .signin{
     display: flex;
+}
+.form{
+    z-index: 10000;
+    flex: 1;
+    width: calc(100vw-828px);
+    display: flex;
+    justify-content:center ;
+    align-items: center;
+}
+.sign{
+    display: inline-flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    gap: 24px;
 }
 .image_wrapper{
     width: 828px;
     height: 1024px;
     position: relative;
+  
 }
 .texts{
     display: flex;
     width: 100%;
     height: 100%;
+    overflow: hidden;
+    position: relative;
 }
-#box1, #box2{
+
+#box1{
     background-image: url("./../../public/login_2.png");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
     height: 100%;
     width: 100%;
+    transition:  4s ease-in-out;
+    position: absolute;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
 }
+
 #box2{
     background-image: url("./../../public/login_1.png");
-    display: none;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    left: 900px;
+    transition: 4s ease-in-out;
+}
+.display{
+background-image: (255, 255, 255, 0.5);
+backdrop-filter: blur(4px);
+box-shadow: 0 8px 32px rgba(31, 18, 135, 0.37);
+margin-bottom: 30px;
+width: 60%;
+height: 300px;
+padding: 20px;
+border-radius: 5px;
+}
+
+input[type="text"], input[type="password"], button[type="submit"]{
+    border: none;
+    border: 1px solid black;
+    border-radius: 5px;
+    outline: none;
+    display: flex;
+    width: 352px;
+    height: 48px;
+    padding: 8px 24px;
+    align-items: center;
+    gap: 10px;
+}
+
+button[type="submit"]{
+border-radius: 8px;
+background-color:  #1D70C9;
+border: none;
+justify-content:center ;
+}
+
+
+
+
+.sign h2{
+font-family: Poppins;
+font-size: 24px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
 }
