--- a/src/Pages/HomePage/Home.css
+++ b/src/Pages/HomePage/Home.css
@@ -18,7 +18,7 @@ header {
   @apply w-full h-8 outline-none;
 }
 .notifications {
-  @apply flex lg:space-x-4 w-max justify-center items-center ;
+  @apply flex lg:space-x-4 space-x-1 items-center;
 }
 .rightHomepageWrapper .welcome {
   @apply text-xl;
