--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 * {
-  @apply p-0 m-0 box-border lg:text-base text-sm transition-all ease-in-out duration-300;
+  @apply p-0 m-0 box-border lg:text-sm text-xs transition-all ease-in-out duration-300;
 }
 html {
   scroll-behavior: smooth;
